# wisey

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
guides/: thinkwise-platform-architecture.md
notes/: 01-transaction-log-full-incident.md  02-tsf-send-message-parameters.md  03-trigger-union-except-column-mismatch.md  04-thinkwise-cubes-and-prefilters.md
scripts/: ingest-community.sh  ingest-docs.sh
sql/: 001_init.sql  002_vector_768.sql
wisey/: agent.py  chunker.py  clean.py  crawl_community.py  crawl_docs.py  db.py  embed.py  ingest.py  ingest_notes.py  mcp_server.py  telegram_bot.py  watch_notes.py
